[package]
name = "oxide-serve"
version = "0.1.0"
edition = "2021"
description = "A minimal, multi-threaded HTTP server built from scratch using only the Rust standard library."
authors = ["Sol <sol@oxide-serve.dev>"]
license = "MIT"
repository = "https://github.com/NefaroXX/oxide-serve"
keywords = ["http", "server", "minimal", "educational", "no-std-deps"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
