[package]
name = "oxide-serve"
version = "0.1.0"
edition = "2021"
description = "A minimal, multi-threaded HTTP server built from scratch using only the Rust standard library."
readme = "README.md"
license = "MIT"
authors = ["NefaroXX"]
repository = "https://github.com/NefaroXX/oxide-serve"
homepage = "https://github.com/NefaroXX/oxide-serve"
documentation = "https://docs.rs/oxide-serve"
keywords = ["http", "server", "minimal", "educational", "no-std-deps"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
